--- a/routes.yml
+++ b/routes.yml
@@ -9,3 +9,4 @@
 "/uzytkownik/nowy": "Users#newform"
 "/uzytkownik/utworz": "Users#create"
 "/uzytkownik/zaloguj": "Users#login"
+"/uzytkownik/wyloguj": "Users#logout"
