--- a/routes.yml
+++ b/routes.yml
@@ -2,6 +2,8 @@
 "/zadania/nowe": "Exercises#newform"
 "/zadania/utworz": "Exercises#create"
 "/zadania/moje": "Exercises#userslist"
+"/zadania/edytuj": "Exercises#edit"
+"/zadania/zapisz": "Exercises#save"
 "/zadania": "Exercises#index"
 "/kategorie": "Categories#index"
 "/kategorie/nowa": "Categories#newform"
